--- a/examples/pwa/index.html
+++ b/examples/pwa/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>{app_title}</title>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register(
-        '/sw.js'
-      );
-    }
-  </script>
-  <link rel="manifest" href="manifest.json">
-  <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8" />
-  {style_include}
-</head>
-<body>
-  <div id="main"></div>
-  <script type="module">
-    import init from "/{base_path}/assets/dioxus/{app_name}.js";
-    init("/{base_path}/assets/dioxus/{app_name}_bg.wasm").then(wasm => {
-      if (wasm.__wbindgen_start == undefined) {
-        wasm.main();
+  <head>
+    <title>{app_title}</title>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/{base_path}/assets/sw.js");
       }
-    });
-  </script>
-  {script_include}
-</body>
+    </script>
+    <link rel="manifest" href="/assets/manifest.json" />
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <div id="main"></div>
+  </body>
 </html>
